--- a/styles.css
+++ b/styles.css
@@ -113,15 +113,18 @@ nav ul li {
   flex: 60%;
   margin: 1.5em;
 
+  /*
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
+  */
 }
+/*
 .aboutme-portrait:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
-}
+}*/
 .aboutme-text-flex {
   display: flex;
   flex-direction: column;
@@ -136,7 +139,26 @@ nav ul li {
   line-height: 1.5;
   text-align: center;
 }
-
+.weblinkLI {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+.weblinkG {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+.weblinkLI:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.weblinkG:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 .edu-flex {
   display: flex;
   flex-direction: column;
