icons for about me

--- a/styles.css
+++ b/styles.css
@@ -320,4 +320,13 @@ body {
 
 .social-icon {
   color: var(--bg-color1);
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.social-icon:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
