--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,7 @@ header {
     box-sizing: border-box;
 
 }
-.master-logo {
-  justify-content: left;
-  padding-left: 1em;
+
 }
 html {
     scroll-behavior: smooth;
@@ -41,6 +39,7 @@ nav ul {
 }
 
 header nav h1 a{
+  align-items: baseline;
   justify-content: left;
   padding-left:1em;
   font-size: 2.5em;
