--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ header {
 
 }
 
-}
 html {
     scroll-behavior: smooth;
   }
@@ -336,8 +335,14 @@ body {
 ion-icon {
   font-size: 32px;
 }
+.navigation2 {
+  display: none;
+}
 @media only screen and (max-width: 768px) {
   .navigation {
     display: none;
+  }
+  .navigation {
+    display:block;
   }
 }
