--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,7 @@ ion-icon {
   .navigation {
     display: none;
   }
-  .navigation {
-    display:block;
+  .navigation2 {
+    display: block;
   }
 }
