--- a/styles.css
+++ b/styles.css
@@ -346,3 +346,9 @@ ion-icon {
     display: unset;
   }
 }
+@media only screen and (max-width: 825px) {
+  .edu-ucsd-flex {
+    display: flex;
+    flex-direction: column;
+  }
+}
