--- a/styles.css
+++ b/styles.css
@@ -354,3 +354,16 @@ ion-icon {
     flex-wrap: nowrap;
   }
 }
+
+.ucsd-logo {
+  margin: 2em;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.ucsd-logo:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
