ucsd logo addition

--- a/styles.css
+++ b/styles.css
@@ -361,6 +361,7 @@ ion-icon {
   transform: scale(1);
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
+  justify-self: center;
 }
 
 .ucsd-logo:hover {
