--- a/styles.css
+++ b/styles.css
@@ -355,7 +355,9 @@ ion-icon {
   }
 
   main {
-    font-size: 30px;
+    font-size: 20px;
+    margin: 1em;
+    padding: 0.5em, 1em, 1em, 1em;
   }
 
   .f {
