--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: 0em;
   padding: 0em;
-  background-image: url("images/oriental-tiles.png");
+  background-image: url(images/oriental-tiles.png);
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
   font-family: "Roboto";
