--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ nav ul li {
   margin: 1.5em;
   background-color: var(--bg-color2);
   flex: 60%;
+  opacity: .3;
 }
 .aboutme-text-flex p {
   line-height: 1.5;
