--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ nav ul li {
 .aboutme-text-flex p {
   line-height: 1.5;
   text-align: center;
-  opacity: 1;
+  opacity: 1 !important;
 }
 .aboutme-socials-flex {
   display: flex;
@@ -146,7 +146,7 @@ nav ul li {
 .aboutme-socials-flex .social-icon {
   padding-left: 0.5em;
   padding-right: 0.5em;
-  opacity: 1;
+  opacity: 1 !important;
 }
 .edu-flex {
   display: flex;
