--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: 0em;
   padding: 0em;
-  background-image: url(/images/oriental-tiles.png) !important;
+  background-image: url(/images/FreeVector-Geometric-Vector-Pattern.jpg) !important;
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
   font-family: "Roboto";
