--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: 0em;
   padding: 0em;
-  background-image: url(/images/Geometric-Waves-Seamless-Pattern-.png) !important;
+  background-image: url(/images/Visiwig-Circle-Overlaps.svg) !important;
   background-size: 400px !important;
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
