--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   margin: 0em;
   padding: 0em;
   background-image: url(/images/linegeo3-04-17-01.jpg) !important;
-  /*background-size: 4000px !important;*/
+  background-size: 300px !important;*/
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
   font-family: "Roboto";
