--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   margin: 0em;
   padding: 0em;
   background-image: url(/images/linegeo3-04-17-01.jpg) !important;
-  background-size: 300px !important;*/
+  background-size: 300px !important;
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
   font-family: "Roboto";
@@ -110,7 +110,8 @@ nav ul li {
   max-width: 300px;
   flex: 60%;
   margin: 1.5em;
-
+  outline-color: var(--bg-color2);
+  outline-width: 5px;
   /*
   -webkit-transform: scale(1);
   transform: scale(1);
