--- a/styles.css
+++ b/styles.css
@@ -110,8 +110,7 @@ nav ul li {
   max-width: 300px;
   flex: 60%;
   margin: 1.5em;
-  border: var(--bg-color1);
-  border-width: 5px;
+  border: 5px solid var(--bg-color1);
   /*
   -webkit-transform: scale(1);
   transform: scale(1);
