--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ nav ul li {
   align-items: center;
   padding: 3em;
   margin: 1.5em;
+  border: 5px solid var(--bg-color1);
   background-color: var(--bg-color2);
   flex: 60%;
 }
@@ -152,6 +153,7 @@ nav ul li {
   justify-content: space-around;
   align-items: center;
   padding: 3em;
+  border: 5px solid var(--bg-color2);
   background-color: var(--bg-color1);
   margin: 3em;
 }
@@ -182,6 +184,7 @@ nav ul li {
   justify-content: space-around;
   align-items: center;
   padding: 3em;
+  border: 5px solid var(--bg-color1);
   background-color: var(--bg-color2);
   margin: 3em;
 }
@@ -208,6 +211,7 @@ nav ul li {
   flex-direction: column;
   justify-content:space-around;
   align-content: center;
+  border: 5px solid var(--bg-color2);
   background-color: var(--bg-color1);
   padding: 3em;
   text-align: center;
@@ -283,6 +287,7 @@ nav ul li {
 .flex-proj {
   display: flex;
   flex-direction: column;
+  border: 5px solid var(--bg-color1);
   background-color: var(--bg-color2);
   padding: 3em;
   justify-content: center;
