--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
     --bg-color1: #272838;
     --bg-color2: #D19D61;
     --bg-color3: #DAB081;
-    --outline: white;
-    --customFont: 
+    --outline: white; 
+    --notchSize: 20px;
 }
 body {
   margin: 0em;
@@ -402,4 +402,18 @@ ion-icon {
 .institution-logo:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+.f {
+  clip-path: 
+    polygon(
+      0% var(--notchSize), 
+      var(--notchSize) 0%, 
+      calc(100% - var(--notchSize)) 0%, 
+      100% var(--notchSize), 
+      100% calc(100% - var(--notchSize)), 
+      calc(100% - var(--notchSize)) 100%, 
+      var(--notchSize) 100%, 
+      0% calc(100% - var(--notchSize))
+    );
 }
