--- a/styles.css
+++ b/styles.css
@@ -416,4 +416,16 @@ ion-icon {
       var(--notchSize) 100%, 
       0% calc(100% - var(--notchSize))
     );
+    border:
+      polygon(
+        0% var(--notchSize), 
+        var(--notchSize) 0%, 
+        calc(100% - var(--notchSize)) 0%, 
+        100% var(--notchSize), 
+        100% calc(100% - var(--notchSize)), 
+        calc(100% - var(--notchSize)) 100%, 
+        var(--notchSize) 100%, 
+        0% calc(100% - var(--notchSize))
+      );
+      border-color: var(--bg-color1);
 }
