--- a/styles.css
+++ b/styles.css
@@ -403,7 +403,7 @@ ion-icon {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
-
+/*
 .f {
   clip-path: 
     polygon(
@@ -416,16 +416,4 @@ ion-icon {
       var(--notchSize) 100%, 
       0% calc(100% - var(--notchSize))
     );
-    border:
-      polygon(
-        0% var(--notchSize), 
-        var(--notchSize) 0%, 
-        calc(100% - var(--notchSize)) 0%, 
-        100% var(--notchSize), 
-        100% calc(100% - var(--notchSize)), 
-        calc(100% - var(--notchSize)) 100%, 
-        var(--notchSize) 100%, 
-        0% calc(100% - var(--notchSize))
-      );
-      border-color: var(--bg-color1);
-}
+}*/
