about me button

--- a/styles.css
+++ b/styles.css
@@ -421,9 +421,9 @@ ion-icon {
   display: inline-flex;
   height: 40px;
   width: 150px;
-  border: 2px solid #BFC0C0;
+  border: 2px solid var(--bg-color1);
   margin: 20px 20px 20px 20px;
-  color: #BFC0C0;
+  color: var(--bg-color1);
   text-transform: uppercase;
   text-decoration: none;
   font-size: .8em;
@@ -433,7 +433,7 @@ ion-icon {
   overflow: hidden;
 }
 .button a {
-  color: #BFC0C0;
+  color: var(--bg-color1);
   text-decoration: none;
   letter-spacing: 1px;
 }
@@ -452,7 +452,7 @@ ion-icon {
 #dub-arrow {
   width: 100%;
   height: 100%;
-  background: #BFC0C0;
+  background: var(--bg-color1);
   left: -200px;
   position: absolute;
   padding: 0;
