about me button

--- a/styles.css
+++ b/styles.css
@@ -443,7 +443,16 @@ svg {
   transition: 0.3s ease-in-out;
   background: var(--bg-color1);
 }
-
+.btn svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
 .btn:hover svg {
   stroke-dashoffset: -480;
 }
