about me button

--- a/styles.css
+++ b/styles.css
@@ -452,6 +452,7 @@ svg {
   stroke-dasharray: 150 480;
   stroke-dashoffset: 150;
   transition: 1s ease-in-out;
+  z-index: 3;
 }
 .btn:hover svg {
   stroke-dashoffset: -480;
