about me button

--- a/styles.css
+++ b/styles.css
@@ -418,6 +418,7 @@ ion-icon {
     );
 }*/
 .btn {
+  position: absolute;
   width: 150px;
   height: 40px;
   cursor: pointer;
@@ -433,7 +434,7 @@ ion-icon {
   background: var(--bg-color1);
 }
 svg {
-  position:absolute;
+  position:relative;
   left: 0;
   top: 0;
   fill: none;
