--- a/styles.css
+++ b/styles.css
@@ -175,8 +175,10 @@ nav ul li {
   flex-direction: row;
   justify-content: space-around;
   align-items:flex-start;
-  padding: 3em;
-  margin-top: 0em;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .exp-flex {
@@ -237,8 +239,10 @@ nav ul li {
   flex-direction: row;
   justify-content: space-around;
   align-items:flex-start;
-  padding: 3em;
-  margin-top: 0em;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 .skills-flex {
   display: flex;
