--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ ion-icon {
 footer {
   background-color: var(--bg-color1);
   font-family:Verdana, Geneva, Tahoma, sans-serif !important;
-  margin: 0em;
+  margin-top: 1em;
   padding: 3em;
   box-sizing: border-box;
 }
