back to top button

--- a/styles.css
+++ b/styles.css
@@ -418,8 +418,7 @@ ion-icon {
 .topBtn {
   border: 1px solid var(--bg-color2);
   background: var(--bg-color1) !important;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 .topBtn:hover {
