--- a/styles.css
+++ b/styles.css
@@ -374,7 +374,7 @@ ion-icon {
   transition: 0.3s ease-in-out;
 }
 
-.btn a {
+.btn span {
   font-size: 15px;
   transition: 0.3s ease-in-out;
 }
@@ -424,7 +424,7 @@ ion-icon {
   background: var(--bg-color2);
 }
 
-.topBtn a {
+.topBtn span {
   color: var(--bg-color2);
 }
 
