image scale down

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: 0em;
   padding: 0em;
-  background-image: url(/images/linegeo3-04-17-01.jpg) !important;
+  background-image: url(/images/background.jpg) !important;
   background-size: 300px !important;
   /*background-color: var(--bg-color3);*/
   box-sizing: border-box;
