--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,14 @@
     --name-color: black;
     --nav-color: black;
     --hover-color: white;
+    /*
     --bg-color1: #272838;
     --bg-color2: #D19D61;
     --bg-color3: #DAB081;
+    */
+    --bg-color1: #D25F57;
+    --bg-color2: #e4dece;
+    --bg-color3: #e4dece;
     --color-raspBlush: #D25F57;
     --color-sailCloth: #e4dece;
     --outline: white; 
