--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
     --bg-color2: #D19D61;
     --bg-color3: #DAB081;
     */
-    --bg-color1: #D25F57;
+    /*--bg-color1: #D25F57;*/
+    --bg-color1: #823F44;
     --bg-color2: #e4dece;
     --border-color: black;
     --outline: white; 
