--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ body {
   border-radius: 25px;
   background-color: var(--bg-color1);
   border: 2px solid var(--border-color);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /*box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;*/
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 main {
