--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ header {
     margin: 0em;
     padding: 0em;
     box-sizing: border-box;
-    border-bottom: 5px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 html {
@@ -138,7 +139,8 @@ nav ul li {
   max-width: 300px;
   flex: 60%;
   margin: 1.5em;
-  border: 5px solid var(--border-color);
+  border: 2px solid var(--border-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   /*
   -webkit-transform: scale(1);
   transform: scale(1);
