--- a/styles.css
+++ b/styles.css
@@ -447,8 +447,9 @@ ion-icon {
 
 .topBtn {
   margin-top: 0;
-  border: 1px solid var(--bg-color2);
+  border: 2px solid var(--border-color);
   background: var(--bg-color1) !important;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .topBtn:hover {
