--- a/styles.css
+++ b/styles.css
@@ -450,10 +450,12 @@ ion-icon {
   border: 2px solid var(--border-color);
   background: var(--bg-color1) !important;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 25px;
 }
 
 .topBtn:hover {
   background: var(--bg-color2);
+  border-radius: 0px;
 }
 
 .topBtn span {
