--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     --outline: white; 
     --notchSize: 20px;
 }
+
 body {
   margin: 0em;
   padding: 0em;
@@ -23,6 +24,19 @@ body {
   background-color: var(--bg-color3);*/
   box-sizing: border-box;
   font-family: "Roboto";
+}
+
+.body h2{
+  color: var(--bg-color2);
+}
+.body h3{
+  color: var(--bg-color2);
+  min-width: 10em;
+}
+.body p{
+  color: var(--bg-color2);
+  padding-left: 3em;
+  line-height: 1.5;
 }
 
 .box {
