--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  margin: 0em;
+  margin: auto;
   padding: 0em;
   background: var(--bg-color2);
   /*background-image: url(/images/Visiwig-Leaf-Alternates-2.svg) !important;
