--- a/styles.css
+++ b/styles.css
@@ -316,61 +316,6 @@ ion-icon {
 .navigation2 {
   display: none;
 }
-@media only screen and (max-width: 1153px) {
-  .navigation {
-    display: none;
-  }
-  .navigation2 {
-    display: unset;
-  }
-  .edu-ucsd-flex {
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-  .exp-institution-flex {
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-
-  main {
-    font-size: 20px;
-    margin: 1em;
-    padding: 0.5em, 1em, 1em, 1em;
-  }
-
-  .f {
-    padding: 1em;
-    margin: 1em;
-  }
-
-  .f2 {
-    padding: 1em;
-    margin: 1em;
-  }
-  .f3 {
-    padding-left: 1em;
-  }
-  .aboutme-text-flex {
-    margin: 0em;
-  }
-  ion-icon {
-    font-size: 64px;
-  }
-}
-
-.institution-logo {
-  margin: 2em;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  align-self: center;
-}
-
-.institution-logo:hover {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
 /*
 .f {
   clip-path: 
@@ -463,7 +408,51 @@ footer {
   margin-top: 3em;
   padding: 3em;
   box-sizing: border-box;
-  border-top: 5px solid var(--border-color)
+  border-top: 2px solid var(--border-color)
 }
 
+@media only screen and (max-width: 1153px) {
+  .navigation {
+    display: none;
+  }
+  .navigation2 {
+    display: unset;
+  }
+  .edu-ucsd-flex {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .exp-institution-flex {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  main {
+    font-size: 20px;
+    margin: 1em;
+    padding: 0.5em, 1em, 1em, 1em;
+  }
+
+  .f {
+    padding: 1em;
+    margin: 1em;
+  }
+
+  .f2 {
+    padding: 1em;
+    margin: 1em;
+  }
+  .f3 {
+    padding-left: 1em;
+  }
+  .aboutme-text-flex {
+    margin: 0em;
+  }
+  ion-icon {
+    font-size: 64px;
+  }
+  .topBtn {
+    margin-top: 1em;
+  }
+}
 
