--- a/styles.css
+++ b/styles.css
@@ -451,8 +451,18 @@ footer {
   ion-icon {
     font-size: 64px;
   }
+  .btn {
+    width: 200px;
+    height: 90px;
+  }
+  .btn span {
+    font-size: 20px;
+  }
+  .btn:hover span {
+    font-size: 22px;
+  }
   .topBtn {
-    margin-top: 1em;
+    margin-top: 2em;
   }
 }
 
