--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,10 @@ ion-icon {
   color: var(--bg-color2);
 }
 
+#f1repo {
+  
+}
+
 footer {
   background-color: var(--bg-color1);
   font-family:Verdana, Geneva, Tahoma, sans-serif !important;
