--- a/styles.css
+++ b/styles.css
@@ -418,6 +418,27 @@ input::placeholder {
   opacity: .5;
   color: var(--bg-color1);
 }
+input {
+  font-size: 15px;
+  line-height: 1.5;
+}
+textarea {
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+textarea[type=text] {
+  padding:10px;
+  margin:10px 0;
+  border-radius: 25px;
+}
+
+textarea::placeholder {
+  font-weight: bold;
+  font-size: 15px;
+  opacity: .5;
+  color: var(--bg-color1);
+}
 
 footer {
   background-color: var(--bg-color1);
