--- a/styles.css
+++ b/styles.css
@@ -446,6 +446,16 @@ textarea::placeholder {
   color: var(--bg-color1);
 }
 
+input:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px var(--bg-color2);
+}
+
+textarea:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px var(--bg-color2);
+}
+
 footer {
   background-color: var(--bg-color1);
   font-family:Verdana, Geneva, Tahoma, sans-serif !important;
