--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,35 @@ nav ul a:hover {
     --_p: 100%
 }
 
+
+.mobileMenu {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+  display: none;
+}
+
+.mobileMenu a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.mobileMenu a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.mobileMenu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 nav {
   position: sticky;
   top: 0;
@@ -470,8 +499,8 @@ footer {
   .navigation {
     display: none;
   }
-  .navigation2 {
-    display: unset;
+  .mobileMenu {
+    display: block;
   }
   body h2{
     font-size: 3em !important;
