--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,13 @@ nav ul a:hover {
   overflow: hidden;
   background-color: #333;
   position: relative;
-  display: none;
 }
 
 #mobileLinks{
+  display: none;
+}
+
+.hamburgerMenu {
   display: none;
 }
 
@@ -503,8 +506,7 @@ footer {
     display: none;
   }
   .hamburgerMenu {
-    display: block!important;
-    z-index: 4;
+    display: block;
   }
   body h2{
     font-size: 3em !important;
