--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ nav ul a:hover {
   overflow: hidden;
   background-color: #333;
   position: relative;
-  display: none
+  display: none;
 }
 
 #mobileLinks{
