--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,6 @@ nav ul a:hover {
   overflow: hidden;
   background-color: #333;
   position: relative;
-  display: none;
 }
 
 #mobileLinks{
@@ -501,7 +500,11 @@ footer {
   box-sizing: border-box;
   border-top: 2px solid var(--border-color)
 }
-
+@media only screen and (min-width: 1154px) {
+  .mobileMenu {
+    display: none;
+  }
+}
 @media only screen and (max-width: 1153px) {
   .navigation {
     display: none;
