--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,6 @@ nav ul a:hover {
 
 .mobileMenu {
   overflow: hidden;
-  background-color: #333;
   position: relative;
 }
 
@@ -88,24 +87,14 @@ nav ul a:hover {
 }
 
 .mobileMenu a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  color: var(--bg-color1);
+  font-size: 20px;
   display: block;
 }
 
-.mobileMenu a.icon {
-  background: black;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
 
 .mobileMenu a:hover {
-  background-color: #ddd;
-  color: black;
+  border: 2px solid black;
 }
 
 nav {
