--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ nav ul a:hover {
 
 .mobileMenu {
   overflow: hidden;
+  background-color: #333;
   position: relative;
 }
 
@@ -87,14 +88,24 @@ nav ul a:hover {
 }
 
 .mobileMenu a {
-  color: var(--bg-color1);
-  font-size: 20px;
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
   display: block;
 }
 
+.mobileMenu a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 
 .mobileMenu a:hover {
-  border: 2px solid black;
+  background-color: #ddd;
+  color: black;
 }
 
 nav {
